fix: ocultada a scrollbar desnecessária da versão mobile na tela inicial

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
     display: grid;
     place-items: center;
     height: 62rem;
+    overflow: hidden;
 }
 
 .textoPrincipal {
